# ultra-minecraft-clone

./: CMakeLists.txt
assets/shaders/: chunk_mesh.frag.glsl  chunk_mesh.vert.glsl  triangle.fs  triangle.vs
src/: CameraController.cpp  CameraController.hpp  Game.cpp  Game.hpp  Log.hpp  ThisProjectGL.hpp  main.cpp
src/Rendering/: Camera.cpp  Camera.hpp  GLProgram.cpp  GLProgram.hpp  IChunkRenderer.hpp
src/Rendering/OpenGL/: ChunkRenderer.cpp  ChunkRenderer.hpp  GLChunkRenderer.cpp  GLChunkRenderer.hpp  GLProgram.cpp  GLProgram.hpp  GLTexture.cpp  GLTexture.hpp
src/RmlUiBackend/: RmlUi_Platform_SDL.cpp  RmlUi_Platform_SDL.h  RmlUi_Renderer_GL3.cpp
src/World/: ChunkWorld.cpp  ChunkWorld.hpp
